# SimpleJsonReader

./: README.md
include/SimpleJson/: Common.hpp  Handler.hpp  Reader.hpp
src/: Handler.cpp  Reader.cpp
tests/: .gitignore  CMakeLists.txt  first_test.cpp  handler_test.cpp  reader_test.cpp
